--- a/data_overview.ipynb
+++ b/data_overview.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "6ec36fe2-6c0d-47d2-a968-fa4348a3ab09",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading libraries\n",
+    "import os\n",
     "import requests\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "b4f3bdff-63a8-487a-a91c-36b3877a0014",
    "metadata": {},
    "outputs": [],
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "8d89e542-c7eb-46fb-b43c-36f6eabc0260",
    "metadata": {},
    "outputs": [],
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "e1296e56-9b5c-4276-a81c-ff95935bbee6",
    "metadata": {},
    "outputs": [],
@@ -80,8 +81,8 @@
     "def query_acs(var_name, var_code, state_fips, api_key):\n",
     "    \n",
     "    # General format for ACS data retrieval for all census tracts in a state\n",
-    "    ACS_BASE_URL = 'https://api.census.gov/data/2019/acs/acs5?get=NAME,'\n",
-    "    ACS_SUBJECT_URL = 'https://api.census.gov/data/2019/acs/acs5/subject?get=NAME,'\n",
+    "    ACS_BASE_URL = 'https://api.census.gov/data/2020/acs/acs5?get=NAME,'\n",
+    "    ACS_SUBJECT_URL = 'https://api.census.gov/data/2020/acs/acs5/subject?get=NAME,'\n",
     "    ACS_TRACTS = '&for=tract:*&in=state:'\n",
     "    ACS_KEY = '&key=' + api_key\n",
     "    \n",
@@ -115,194 +116,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7ed8a7c-7188-4359-a63e-9ee97999e38c",
+   "metadata": {},
+   "source": [
+    "## Building US Census Dataset\n",
+    "Please find an example of how you could build a dataset with the US Census Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "f4c0fd0d-aeff-4e65-beba-71a02595a020",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>total_pop</th>\n",
-       "      <th>state</th>\n",
-       "      <th>county</th>\n",
-       "      <th>tract</th>\n",
-       "      <th>GEOID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Census Tract 11, Jefferson County, Alabama</td>\n",
-       "      <td>4781</td>\n",
-       "      <td>01</td>\n",
-       "      <td>073</td>\n",
-       "      <td>001100</td>\n",
-       "      <td>01073001100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Census Tract 14, Jefferson County, Alabama</td>\n",
-       "      <td>1946</td>\n",
-       "      <td>01</td>\n",
-       "      <td>073</td>\n",
-       "      <td>001400</td>\n",
-       "      <td>01073001400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Census Tract 20, Jefferson County, Alabama</td>\n",
-       "      <td>4080</td>\n",
-       "      <td>01</td>\n",
-       "      <td>073</td>\n",
-       "      <td>002000</td>\n",
-       "      <td>01073002000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Census Tract 38.02, Jefferson County, Alabama</td>\n",
-       "      <td>5291</td>\n",
-       "      <td>01</td>\n",
-       "      <td>073</td>\n",
-       "      <td>003802</td>\n",
-       "      <td>01073003802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Census Tract 40, Jefferson County, Alabama</td>\n",
-       "      <td>2533</td>\n",
-       "      <td>01</td>\n",
-       "      <td>073</td>\n",
-       "      <td>004000</td>\n",
-       "      <td>01073004000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1176</th>\n",
-       "      <td>Census Tract 104, Lauderdale County, Alabama</td>\n",
-       "      <td>3023</td>\n",
-       "      <td>01</td>\n",
-       "      <td>077</td>\n",
-       "      <td>010400</td>\n",
-       "      <td>01077010400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1177</th>\n",
-       "      <td>Census Tract 113, Lauderdale County, Alabama</td>\n",
-       "      <td>2049</td>\n",
-       "      <td>01</td>\n",
-       "      <td>077</td>\n",
-       "      <td>011300</td>\n",
-       "      <td>01077011300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1178</th>\n",
-       "      <td>Census Tract 116.02, Lauderdale County, Alabama</td>\n",
-       "      <td>4447</td>\n",
-       "      <td>01</td>\n",
-       "      <td>077</td>\n",
-       "      <td>011602</td>\n",
-       "      <td>01077011602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1179</th>\n",
-       "      <td>Census Tract 102, Lauderdale County, Alabama</td>\n",
-       "      <td>2175</td>\n",
-       "      <td>01</td>\n",
-       "      <td>077</td>\n",
-       "      <td>010200</td>\n",
-       "      <td>01077010200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1180</th>\n",
-       "      <td>Census Tract 49, Mobile County, Alabama</td>\n",
-       "      <td>3711</td>\n",
-       "      <td>01</td>\n",
-       "      <td>097</td>\n",
-       "      <td>004900</td>\n",
-       "      <td>01097004900</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1181 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 NAME total_pop state county  \\\n",
-       "0          Census Tract 11, Jefferson County, Alabama      4781    01    073   \n",
-       "1          Census Tract 14, Jefferson County, Alabama      1946    01    073   \n",
-       "2          Census Tract 20, Jefferson County, Alabama      4080    01    073   \n",
-       "3       Census Tract 38.02, Jefferson County, Alabama      5291    01    073   \n",
-       "4          Census Tract 40, Jefferson County, Alabama      2533    01    073   \n",
-       "...                                               ...       ...   ...    ...   \n",
-       "1176     Census Tract 104, Lauderdale County, Alabama      3023    01    077   \n",
-       "1177     Census Tract 113, Lauderdale County, Alabama      2049    01    077   \n",
-       "1178  Census Tract 116.02, Lauderdale County, Alabama      4447    01    077   \n",
-       "1179     Census Tract 102, Lauderdale County, Alabama      2175    01    077   \n",
-       "1180          Census Tract 49, Mobile County, Alabama      3711    01    097   \n",
-       "\n",
-       "       tract        GEOID  \n",
-       "0     001100  01073001100  \n",
-       "1     001400  01073001400  \n",
-       "2     002000  01073002000  \n",
-       "3     003802  01073003802  \n",
-       "4     004000  01073004000  \n",
-       "...      ...          ...  \n",
-       "1176  010400  01077010400  \n",
-       "1177  011300  01077011300  \n",
-       "1178  011602  01077011602  \n",
-       "1179  010200  01077010200  \n",
-       "1180  004900  01097004900  \n",
-       "\n",
-       "[1181 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current State: AL\n",
+      "Current Variable: total_pop\n",
+      "(1437, 6)\n",
+      "Current Variable: white_no_hispanic\n",
+      "(1437, 6)\n",
+      "Current Variable: year_built\n",
+      "(1437, 6)\n",
+      "Current Variable: internet_access\n",
+      "(1437, 6)\n",
+      "Current Variable: total_households\n",
+      "(1437, 6)\n",
+      "Current Variable: labor_force_rate\n",
+      "(1437, 6)\n",
+      "Current Variable: pop_16_older\n",
+      "(1437, 6)\n",
+      "Current Variable: less_than_hs\n",
+      "(1437, 6)\n",
+      "Current Variable: insured\n",
+      "(1437, 6)\n",
+      "Current Variable: senior_living_alone\n",
+      "(1437, 6)\n",
+      "Current Variable: above_200_poverty\n",
+      "(1437, 6)\n",
+      "Current Variable: occupied_housing_units\n",
+      "(1437, 6)\n",
+      "Current Variable: owner_occupied\n",
+      "(1437, 6)\n",
+      "Current Variable: renter_occupied\n",
+      "(1437, 6)\n",
+      "Current Variable: disabled\n",
+      "(1437, 6)\n",
+      "Wrote AL results\n",
+      "Done getting data\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'to_csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_0/9_g22rvs1c3d7sy3mlzk7mtm0000gn/T/ipykernel_28247/71648077.py\u001b[0m in \u001b[0;36m<cell line: 59>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done getting data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"acs_data.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done writing data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'to_csv'"
+     ]
     }
    ],
    "source": [
-    "# Get API Key\n",
+    "# Read in US Census API Key\n",
     "census_api_key = \"\"\n",
     "f = open(\"api_keys/us_census_api_key.txt\", \"r\")\n",
     "census_api_key = f.read().rstrip(\"\\n\")\n",
     "f.close()\n",
     "\n",
-    "query_acs(\"total_pop\", census_vars[\"total_pop\"], \"01\", census_api_key)"
+    "# Directory structure\n",
+    "outdir = os.path.join(\"data\", \"acs\")\n",
+    "states_outdir = os.path.join(outdir, \"states\")\n",
+    "\n",
+    "# Create directories if needed\n",
+    "if not (os.path.isdir(outdir)):\n",
+    "    os.mkdir(outdir)\n",
+    "    \n",
+    "if not (os.path.isdir(states_outdir)):\n",
+    "    os.mkdir(states_outdir)\n",
+    "\n",
+    "# Get list of State FIPS codes\n",
+    "states = pd.read_csv(\"data/support/state_fips.csv\", dtype={\"STATE\": str})\n",
+    "states_fips = list(states[\"STATE\"])\n",
+    "\n",
+    "results = None\n",
+    "\n",
+    "# Iterate through all states\n",
+    "for fip in states_fips:\n",
+    "    \n",
+    "    state_abbr = states[states[\"STATE\"] == fip][\"STUSAB\"].values[0]\n",
+    "    print(f\"Current State: {state_abbr}\")\n",
+    "    \n",
+    "    state_results = None \n",
+    "    # Iterate through all variables\n",
+    "    for var_name, var_code in census_vars.items():\n",
+    "        print(f\"Current Variable: {var_name}\")\n",
+    "        \n",
+    "        curr_df = query_acs(var_name, var_code, fip, census_api_key)\n",
+    "        print(f\"{curr_df.shape}\")\n",
+    "        \n",
+    "        # Collect all variables for a given state in the results df\n",
+    "        if not (curr_df is None):\n",
+    "            if not (state_results is None):\n",
+    "                state_results = pd.merge(state_results, curr_df[[\"GEOID\", var_name]], on=\"GEOID\")\n",
+    "            else:\n",
+    "                state_results = curr_df\n",
+    "        \n",
+    "    # Write State results to file\n",
+    "    state_filename = f\"{state_abbr}.csv\"\n",
+    "    state_results.to_csv(os.path.join(states_outdir, state_filename), index=False)\n",
+    "    print(f\"Wrote {state_abbr} results\")\n",
+    "    break\n",
+    "                \n",
+    "    # Collect state results into overall result dataframe\n",
+    "    if not (state_results is None):\n",
+    "        if not (results is None):\n",
+    "            results = pd.concat([results, state_results])\n",
+    "        else:\n",
+    "            results = state_results\n",
+    "    \n",
+    "print(\"Done getting data\")\n",
+    "results.to_csv(os.path.join(outdir, \"acs_data.csv\"), index=False)\n",
+    "print(\"Done writing data\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2dd51c9-a5d5-4c09-85f3-cc65545c6c04",
+   "id": "c69d5022-baef-4f64-bec3-285a77a048e5",
    "metadata": {},
    "outputs": [],
    "source": []
