full list of variables and working ACS querying script

--- a/data_overview.ipynb
+++ b/data_overview.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6ec36fe2-6c0d-47d2-a968-fa4348a3ab09",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b4f3bdff-63a8-487a-a91c-36b3877a0014",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8d89e542-c7eb-46fb-b43c-36f6eabc0260",
    "metadata": {},
    "outputs": [],
@@ -62,17 +62,18 @@
     "    \"less_than_hs\": \"S2301_C01_032E\", # Population 25 to 64 years that are Less than high school graduate\n",
     "    \"insured\": \"S2701_C02_001E\", # Insured population\n",
     "    \"senior_living_alone\": \"S1101_C01_013E\", # Number of households - householder 65+ years old living alone\n",
-    "    \"above_200_poverty\": \"S0501_C01_106E\", # Total population at or above 200% poverty level\n",
-    "    \"occupied_housing_units\": \"S0102_C01_090E\", # Total number of housing units\n",
-    "    \"owner_occupied\": \"S0102_C01_091E\", # Number of owner occupied housing units\n",
-    "    \"renter_occupied\": \"S0102_C01_092E\", # Number of renter occupied housing units\n",
-    "    \"disabled\": \"S0102_C01_044E\" # Population with any disability\n",
+    "    \"median_income\": \"B07011_001E\", # Median income for population in the last 12 months\n",
+    "    \"occupied_housing_units\": \"S2501_C01_001E\", # Total number of housing units\n",
+    "    \"owner_occupied\": \"S2501_C03_001E\", # Number of owner occupied housing units\n",
+    "    \"renter_occupied\": \"S2501_C05_001E\", # Number of renter occupied housing units\n",
+    "    \"disabled\": \"B18140_002E\", # Population 16+ years old with any disability with earnings\n",
+    "    \"pop_16_plus\": \"B18140_001E\" # Population 16+ with earnings\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e1296e56-9b5c-4276-a81c-ff95935bbee6",
    "metadata": {},
    "outputs": [],
@@ -126,61 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f4c0fd0d-aeff-4e65-beba-71a02595a020",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current State: AL\n",
-      "Current Variable: total_pop\n",
-      "(1437, 6)\n",
-      "Current Variable: white_no_hispanic\n",
-      "(1437, 6)\n",
-      "Current Variable: year_built\n",
-      "(1437, 6)\n",
-      "Current Variable: internet_access\n",
-      "(1437, 6)\n",
-      "Current Variable: total_households\n",
-      "(1437, 6)\n",
-      "Current Variable: labor_force_rate\n",
-      "(1437, 6)\n",
-      "Current Variable: pop_16_older\n",
-      "(1437, 6)\n",
-      "Current Variable: less_than_hs\n",
-      "(1437, 6)\n",
-      "Current Variable: insured\n",
-      "(1437, 6)\n",
-      "Current Variable: senior_living_alone\n",
-      "(1437, 6)\n",
-      "Current Variable: above_200_poverty\n",
-      "(1437, 6)\n",
-      "Current Variable: occupied_housing_units\n",
-      "(1437, 6)\n",
-      "Current Variable: owner_occupied\n",
-      "(1437, 6)\n",
-      "Current Variable: renter_occupied\n",
-      "(1437, 6)\n",
-      "Current Variable: disabled\n",
-      "(1437, 6)\n",
-      "Wrote AL results\n",
-      "Done getting data\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'to_csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_0/9_g22rvs1c3d7sy3mlzk7mtm0000gn/T/ipykernel_28247/71648077.py\u001b[0m in \u001b[0;36m<cell line: 59>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done getting data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"acs_data.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done writing data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'to_csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in US Census API Key\n",
     "census_api_key = \"\"\n",
@@ -217,7 +167,6 @@
     "        print(f\"Current Variable: {var_name}\")\n",
     "        \n",
     "        curr_df = query_acs(var_name, var_code, fip, census_api_key)\n",
-    "        print(f\"{curr_df.shape}\")\n",
     "        \n",
     "        # Collect all variables for a given state in the results df\n",
     "        if not (curr_df is None):\n",
@@ -225,15 +174,15 @@
     "                state_results = pd.merge(state_results, curr_df[[\"GEOID\", var_name]], on=\"GEOID\")\n",
     "            else:\n",
     "                state_results = curr_df\n",
-    "        \n",
-    "    # Write State results to file\n",
-    "    state_filename = f\"{state_abbr}.csv\"\n",
-    "    state_results.to_csv(os.path.join(states_outdir, state_filename), index=False)\n",
-    "    print(f\"Wrote {state_abbr} results\")\n",
-    "    break\n",
     "                \n",
     "    # Collect state results into overall result dataframe\n",
     "    if not (state_results is None):\n",
+    "        \n",
+    "         # Write State results to file\n",
+    "        state_filename = f\"{state_abbr}.csv\"\n",
+    "        state_results.to_csv(os.path.join(states_outdir, state_filename), index=False)\n",
+    "        print(f\"Wrote {state_abbr} results\")\n",
+    "        \n",
     "        if not (results is None):\n",
     "            results = pd.concat([results, state_results])\n",
     "        else:\n",
@@ -245,9 +194,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "06d615f9-5c7e-4ca8-9aae-3cb341309e71",
+   "metadata": {},
+   "source": [
+    "## Climate Variables\n",
+    "\n",
+    "### National Risk Index\n",
+    "Climate variables were taken from the [National Risk Index](https://hazards.fema.gov/nri/data-resources) created by FEMA. Specifically downloaded the census tract level tables for the US."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84f52581-d22b-4aae-8aac-21286f1dd7b7",
+   "metadata": {},
+   "source": [
+    "## Social Variables\n",
+    "\n",
+    "### Social Vulnerability Index\n",
+    "[Social Vulnerability Index](https://www.atsdr.cdc.gov/placeandhealth/svi/data_documentation_download.html) created by the CDC. Download the 2018 data formatted as a CSV table at the census tract level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70f44d12-70c8-47a9-a21e-1f410aec5991",
+   "metadata": {},
+   "source": [
+    "## Energy Variables\n",
+    "\n",
+    "### Energy Burden\n",
+    "\n",
+    "Energy Burden was taken from the [DOE LEAD tool](https://www.energy.gov/eere/slsc/maps/lead-tool). Choose Federal Poverty Level (FPL) for income model.\n",
+    "\n",
+    "For each state:\n",
+    "1. Click on State\n",
+    "2. Click \"View Census Tracts\"\n",
+    "3. Select \"None\" under show borders (default is Tribal Areas)\n",
+    "4. Click the data download button at the bottom of the state map\n",
+    "\n",
+    "All these files were then concatenated together to create a full US dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c69d5022-baef-4f64-bec3-285a77a048e5",
+   "id": "68112d97-8fe3-4332-92a2-57da7bc8ccb1",
    "metadata": {},
    "outputs": [],
    "source": []
