eviction lab data added

--- a/data_overview.ipynb
+++ b/data_overview.ipynb
@@ -212,7 +212,11 @@
     "## Social Variables\n",
     "\n",
     "### Social Vulnerability Index\n",
-    "[Social Vulnerability Index](https://www.atsdr.cdc.gov/placeandhealth/svi/data_documentation_download.html) created by the CDC. Download the 2018 data formatted as a CSV table at the census tract level."
+    "[Social Vulnerability Index](https://www.atsdr.cdc.gov/placeandhealth/svi/data_documentation_download.html) created by the CDC. Download the 2018 data formatted as a CSV table at the census tract level.\n",
+    "\n",
+    "### Eviction Data\n",
+    "\n",
+    "Used the data from the [Eviction lab](https://evictionlab.org/eviction-tracking/get-the-data/). Download the monthly data at a census tract level for all states. Last collected on 06/27/2022 - contains census tract level data for all months from 01/2020 - 05/2022. Note that this does not offer full coverage of the US."
    ]
   },
   {
