--- a/data_overview.ipynb
+++ b/data_overview.ipynb
@@ -236,7 +236,11 @@
     "3. Select \"None\" under show borders (default is Tribal Areas)\n",
     "4. Click the data download button at the bottom of the state map\n",
     "\n",
-    "All these files were then concatenated together to create a full US dataset."
+    "All these files were then concatenated together to create a full US dataset.\n",
+    "\n",
+    "### Reliability data\n",
+    "\n",
+    "Taken from [EIA Form 861](https://www.eia.gov/electricity/data/eia861/). Note this data exists at a service territory level and needs to be transformed to census tract level data. Main variables to look at are CAIDI, SAIDI and SAIFI."
    ]
   },
   {
