--- a/data_overview.ipynb
+++ b/data_overview.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6ec36fe2-6c0d-47d2-a968-fa4348a3ab09",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8d89e542-c7eb-46fb-b43c-36f6eabc0260",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# List of variables taken from US CENSUS bureau\n",
@@ -242,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -257,6 +259,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
