--- a/support_overview.ipynb
+++ b/support_overview.ipynb
@@ -10,14 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "66d75b2e-cfc6-4bd6-98ce-7c5260d24117",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading Libraries needed\n",
+    "import os\n",
     "import requests\n",
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
     "import numpy as np\n",
     "import re"
    ]
@@ -72,6 +74,149 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5f1efaa",
+   "metadata": {},
+   "source": [
+    "## Geographic References"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ca4931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gets all shapefiles for all states and territories\n",
+    "\n",
+    "# Gets list of all state fips codes\n",
+    "state_fips_df = pd.read_csv(\"data/support/state_fips.csv\", dtype = {\"STATE\": str})\n",
+    "state_fips = list(state_fips_df[\"STATE\"])\n",
+    "base_shp_url = \"https://www2.census.gov/geo/tiger/TIGER2021/TRACT/\"\n",
+    "\n",
+    "geo_fp = \"data/geography/\"\n",
+    "\n",
+    "# Iterate through all state fips codes and get their shapefile\n",
+    "for curr_state in state_fips:\n",
+    "\n",
+    "   # Build current shapefile URL\n",
+    "   curr_shp_name = f\"tl_2021_{curr_state}_tract.zip\"\n",
+    "   curr_shp_url = base_shp_url + curr_shp_name\n",
+    "   shp_resp = requests.get(curr_shp_url)\n",
+    "   \n",
+    "   # Write data out\n",
+    "   if shp_resp.status_code == 200:\n",
+    "      outfile = os.path.join(geo_fp, curr_shp_name)\n",
+    "      f = open(outfile, \"wb\")\n",
+    "      f.write(shp_resp.content)\n",
+    "      f.close()\n",
+    "      print(f\"Done {curr_shp_name}\")\n",
+    "   # Print error message otherwise\n",
+    "   else:\n",
+    "      print(f\"Error in retreiving {curr_state} data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f05f492d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tl_2021_51_tract.zip done!\n",
+      "tl_2021_45_tract.zip done!\n",
+      "tl_2021_69_tract.zip done!\n",
+      "tl_2021_13_tract.zip done!\n",
+      "tl_2021_26_tract.zip done!\n",
+      "tl_2021_48_tract.zip done!\n",
+      "tl_2021_32_tract.zip done!\n",
+      "tl_2021_39_tract.zip done!\n",
+      "tl_2021_18_tract.zip done!\n",
+      "tl_2021_20_tract.zip done!\n",
+      "tl_2021_34_tract.zip done!\n",
+      "tl_2021_15_tract.zip done!\n",
+      "tl_2021_01_tract.zip done!\n",
+      "tl_2021_44_tract.zip done!\n",
+      "tl_2021_50_tract.zip done!\n",
+      "tl_2021_06_tract.zip done!\n",
+      "tl_2021_12_tract.zip done!\n",
+      "tl_2021_49_tract.zip done!\n",
+      "tl_2021_33_tract.zip done!\n",
+      "tl_2021_27_tract.zip done!\n",
+      "tl_2021_38_tract.zip done!\n",
+      "tl_2021_42_tract.zip done!\n",
+      "tl_2021_56_tract.zip done!\n",
+      "tl_2021_19_tract.zip done!\n",
+      "tl_2021_35_tract.zip done!\n",
+      "tl_2021_21_tract.zip done!\n",
+      "tl_2021_29_tract.zip done!\n",
+      "tl_2021_53_tract.zip done!\n",
+      "tl_2021_47_tract.zip done!\n",
+      "tl_2021_66_tract.zip done!\n",
+      "tl_2021_08_tract.zip done!\n",
+      "tl_2021_72_tract.zip done!\n",
+      "tl_2021_24_tract.zip done!\n",
+      "tl_2021_30_tract.zip done!\n",
+      "tl_2021_11_tract.zip done!\n",
+      "tl_2021_05_tract.zip done!\n",
+      "tl_2021_60_tract.zip done!\n",
+      "tl_2021_55_tract.zip done!\n",
+      "tl_2021_41_tract.zip done!\n",
+      "tl_2021_17_tract.zip done!\n",
+      "tl_2021_22_tract.zip done!\n",
+      "tl_2021_36_tract.zip done!\n",
+      "tl_2021_46_tract.zip done!\n",
+      "tl_2021_28_tract.zip done!\n",
+      "tl_2021_09_tract.zip done!\n",
+      "tl_2021_31_tract.zip done!\n",
+      "tl_2021_25_tract.zip done!\n",
+      "tl_2021_04_tract.zip done!\n",
+      "tl_2021_10_tract.zip done!\n",
+      "tl_2021_40_tract.zip done!\n",
+      "tl_2021_54_tract.zip done!\n",
+      "tl_2021_78_tract.zip done!\n",
+      "tl_2021_02_tract.zip done!\n",
+      "tl_2021_16_tract.zip done!\n",
+      "tl_2021_37_tract.zip done!\n",
+      "tl_2021_23_tract.zip done!\n",
+      "Done writing census tract metadata!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gets list of all census tracts for all census tracts from shapefiles\n",
+    "geo_fp = \"data/geography/\"\n",
+    "shp_files = os.listdir(geo_fp)\n",
+    "\n",
+    "census_tract_df = None\n",
+    "\n",
+    "# iterate through all shapefiles and compile census tract metadata\n",
+    "for shp_file in shp_files:\n",
+    "   # build shapefile path and read file\n",
+    "   curr_fp = os.path.join(geo_fp, shp_file)\n",
+    "   curr_gpd = gpd.read_file(curr_fp)\n",
+    "\n",
+    "   # limit to relevant columns\n",
+    "   curr_gpd = curr_gpd[[\"STATEFP\", \"COUNTYFP\", \"TRACTCE\", \"GEOID\"]]\n",
+    "\n",
+    "   # add to overall census tract dataframe\n",
+    "   if not (census_tract_df is None):\n",
+    "      census_tract_df = pd.concat([census_tract_df, curr_gpd])\n",
+    "   else:\n",
+    "      census_tract_df = curr_gpd\n",
+    "\n",
+    "   print(f\"{shp_file} done!\")\n",
+    "\n",
+    "# Write out overall census tract dataframe\n",
+    "census_tract_df.to_csv(os.path.join(geo_fp, \"tract_metadata.csv\"), index = False)\n",
+    "print(\"Done writing census tract metadata!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7d5721e-e5fa-4825-a408-29a0082f2efd",
    "metadata": {},
    "source": [
@@ -90,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -105,6 +250,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
