median income by solar installers cleaned

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -139,109 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>gas_savings_percent</th>\n",
-       "      <th>gas_spending_usd</th>\n",
-       "      <th>electric_savings_percent</th>\n",
-       "      <th>electric_spending_percent</th>\n",
-       "      <th>STATEFP</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Massachusetts</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>135.38</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>6.43</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Rhode Island</td>\n",
-       "      <td>1.06</td>\n",
-       "      <td>99.42</td>\n",
-       "      <td>2.14</td>\n",
-       "      <td>6.47</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Maryland</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>8.91</td>\n",
-       "      <td>1.99</td>\n",
-       "      <td>3.88</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Vermont</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>71.22</td>\n",
-       "      <td>1.97</td>\n",
-       "      <td>7.59</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>California</td>\n",
-       "      <td>2.23</td>\n",
-       "      <td>33.39</td>\n",
-       "      <td>1.79</td>\n",
-       "      <td>2.07</td>\n",
-       "      <td>06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           STATE  gas_savings_percent  gas_spending_usd  \\\n",
-       "0  Massachusetts                 1.00            135.38   \n",
-       "1   Rhode Island                 1.06             99.42   \n",
-       "2       Maryland                 0.42              8.91   \n",
-       "3        Vermont                 0.67             71.22   \n",
-       "4     California                 2.23             33.39   \n",
-       "\n",
-       "   electric_savings_percent  electric_spending_percent STATEFP  \n",
-       "0                      2.34                       6.43      25  \n",
-       "1                      2.14                       6.47      44  \n",
-       "2                      1.99                       3.88      24  \n",
-       "3                      1.97                       7.59      50  \n",
-       "4                      1.79                       2.07      06  "
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "aceee = pd.read_csv(os.path.join(energy_dir, \"ACEEE State Scorecard Data, 2021.csv\"))\n",
     "\n",
@@ -281,8 +181,14 @@
     "\n",
     "# Write ACEEE data\n",
     "aceee.to_csv(os.path.join(aceee_outdir, \"aceee.csv\"), index = False)\n",
-    "aceee.head()\n",
-    "\n"
+    "aceee.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Median income of solar installers by tract"
    ]
   },
   {
@@ -290,7 +196,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "solar_installers = pd.read_csv(\"data/energy/Median income of solar installers by tract.csv\", dtype = {\"CensusTract\": str, \"n\": int, \"median_income\": float})\n",
+    "solar_installers.columns = [\"GEOID\", \"num_solar_installers\", \"median_income_solar\"]\n",
+    "\n",
+    "# Make sure all tract numbers are 11 digits long pad with zeros accordingly\n",
+    "solar_installers[\"GEOID\"] = np.where(\n",
+    "   solar_installers[\"GEOID\"].str.len() == 10,\n",
+    "   \"0\" + solar_installers[\"GEOID\"],\n",
+    "   solar_installers[\"GEOID\"]\n",
+    ")\n",
+    "\n",
+    "# Write file out\n",
+    "solar_installers.to_csv(\"clean_data/energy/median_income_solar_installer.csv\", index = False)\n",
+    "solar_installers.head()\n"
+   ]
   }
  ],
  "metadata": {
