residential rates as percentage of commercial and industrial rates cleaned

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -211,6 +211,51 @@
     "solar_installers.to_csv(\"clean_data/energy/median_income_solar_installer.csv\", index = False)\n",
     "solar_installers.head()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Residential Rates as a % of Commercial and Industral rates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_percent = pd.read_csv(\"data/energy/Residential cost per kWh as % of commercial + industrial rates.csv\")\n",
+    "res_percent = res_percent.iloc[3:54, [0, 8]]\n",
+    "\n",
+    "res_percent.columns = [\"STATE\", \"res_rate_percent_commercial_industrial\"]\n",
+    "\n",
+    "res_percent = res_percent.astype({\n",
+    "   \"STATE\": str,\n",
+    "   \"res_rate_percent_commercial_industrial\": str\n",
+    "})\n",
+    "\n",
+    "res_percent[\"res_rate_percent_commercial_industrial\"] = res_percent[\"res_rate_percent_commercial_industrial\"].str[:-1]\n",
+    "res_percent = res_percent.astype({\"res_rate_percent_commercial_industrial\": float})\n",
+    "\n",
+    "# Add their state fips code\n",
+    "state_fips = pd.read_csv(\"data/support/state_fips.csv\", dtype = {\"STATE\": str})\n",
+    "state_fips = state_fips[[\"STATE_NAME\", \"STATE\"]]\n",
+    "state_fips.columns = [\"STATE\", \"STATEFP\"]\n",
+    "res_percent = pd.merge(res_percent, state_fips, how = \"left\", on = \"STATE\")\n",
+    "\n",
+    "\n",
+    "# Write results out\n",
+    "res_percent.to_csv(\"clean_data/energy/res_rate_percent_commercial_industrial.csv\", index = False)\n",
+    "res_percent.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
