added comments to residential rates cleaning scripts

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -221,20 +221,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>res_rate_percent_commercial_industrial</th>\n",
+       "      <th>STATEFP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>District of Columbia</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Montana</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North Dakota</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  STATE  res_rate_percent_commercial_industrial STATEFP\n",
+       "0               Alabama                                    97.0      01\n",
+       "1  District of Columbia                                    99.0      11\n",
+       "2               Montana                                   105.0      30\n",
+       "3            Washington                                   105.0      53\n",
+       "4          North Dakota                                   106.0      38"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res_percent = pd.read_csv(\"data/energy/Residential cost per kWh as % of commercial + industrial rates.csv\")\n",
+    "# Keep relevant columns and rows\n",
     "res_percent = res_percent.iloc[3:54, [0, 8]]\n",
-    "\n",
+    "# Rename columns\n",
     "res_percent.columns = [\"STATE\", \"res_rate_percent_commercial_industrial\"]\n",
-    "\n",
+    "# Make sure column types are correct\n",
     "res_percent = res_percent.astype({\n",
     "   \"STATE\": str,\n",
     "   \"res_rate_percent_commercial_industrial\": str\n",
     "})\n",
     "\n",
+    "# Remove % sign from residential rates and cast as float\n",
     "res_percent[\"res_rate_percent_commercial_industrial\"] = res_percent[\"res_rate_percent_commercial_industrial\"].str[:-1]\n",
     "res_percent = res_percent.astype({\"res_rate_percent_commercial_industrial\": float})\n",
     "\n",
@@ -243,7 +320,6 @@
     "state_fips = state_fips[[\"STATE_NAME\", \"STATE\"]]\n",
     "state_fips.columns = [\"STATE\", \"STATEFP\"]\n",
     "res_percent = pd.merge(res_percent, state_fips, how = \"left\", on = \"STATE\")\n",
-    "\n",
     "\n",
     "# Write results out\n",
     "res_percent.to_csv(\"clean_data/energy/res_rate_percent_commercial_industrial.csv\", index = False)\n",
