shutoff protection scores cleaning

--- a/retrieval.ipynb
+++ b/retrieval.ipynb
@@ -230,7 +230,19 @@
     "\n",
     "### Reliability data\n",
     "\n",
-    "Taken from [EIA Form 861](https://www.eia.gov/electricity/data/eia861/). Note this data exists at a service territory level and needs to be transformed to census tract level data. Main variables to look at are CAIDI, SAIDI and SAIFI."
+    "Taken from [EIA Form 861](https://www.eia.gov/electricity/data/eia861/). Note this data exists at a service territory level and needs to be transformed to census tract level data. Main variables to look at are CAIDI, SAIDI and SAIFI.\n",
+    "\n",
+    "### Median income of solar installers by tract\n",
+    "\n",
+    "This data was collected by Justin Schott.\n",
+    "\n",
+    "### Residential rates as percentage of commercial and industrial rates\n",
+    "\n",
+    "This data was collected by Justin Schott.\n",
+    "\n",
+    "## Shutoff protection scores\n",
+    "\n",
+    "This data was collected by Justin Schott."
    ]
   },
   {
