NRI uses hurricane, heat wave and wild fire risk instead of overall aggregate

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -49,11 +49,38 @@
    "outputs": [],
    "source": [
     "# Read climate vulnerability with correct column types\n",
-    "climate_vulnerability = pd.read_csv(\"data/climate_vulnerability/NRI_Table_CensusTracts/NRI_Table_CensusTracts.csv\", dtype = {\"TRACTFIPS\": str, \"RISK_SCORE\": float, \"RISK_RATING\": str})\n",
+    "climate_vulnerability = pd.read_csv(\n",
+    "   \"data/climate_vulnerability/NRI_Table_CensusTracts/NRI_Table_CensusTracts.csv\",\n",
+    "   dtype = {\n",
+    "      \"TRACTFIPS\": str,\n",
+    "      \"HRCN_RISKS\": float, \n",
+    "      \"HRCN_RISKR\": str,\n",
+    "      \"HWAV_RISKS\": float,\n",
+    "      \"HWAV_RISKR\": str,\n",
+    "      \"WFIR_RISKS\": float,\n",
+    "      \"WFIR_RISKR\": str\n",
+    "      }\n",
+    "   )\n",
     "\n",
     "# Subset and Rename column names\n",
-    "climate_vulnerability = climate_vulnerability[[\"TRACTFIPS\", \"RISK_SCORE\", \"RISK_RATNG\"]]\n",
-    "climate_vulnerability.columns = [\"GEOID\", \"climate_score\", \"climate_rating\"]\n",
+    "climate_vulnerability = climate_vulnerability[[\n",
+    "   \"TRACTFIPS\",\n",
+    "   \"HRCN_RISKS\",\n",
+    "   \"HRCN_RISKR\",\n",
+    "   \"HWAV_RISKS\",\n",
+    "   \"HWAV_RISKR\",\n",
+    "   \"WFIR_RISKS\",\n",
+    "   \"WFIR_RISKR\"]]\n",
+    "\n",
+    "climate_vulnerability.columns = [\n",
+    "   \"GEOID\",\n",
+    "   \"hurricane_risk_index\",\n",
+    "   \"hurricane_risk_rating\",\n",
+    "   \"heat_wave_risk_index\",\n",
+    "   \"heat_wave_risk_rating\",\n",
+    "   \"wild_fire_risk_index\",\n",
+    "   \"wild_fire_risk_rating\"\n",
+    "   ]\n",
     "\n",
     "# Format GEOID column to have 11 digits, pad with 0s as necessary\n",
     "climate_vulnerability[\"GEOID\"] = np.where(\n",
@@ -219,10 +246,9 @@
     "aceee = aceee[\n",
     "   [\"STATE\",\n",
     "   \"GAS \\nSAVINGS - % \\nof retail residential and commercial sales\",\n",
-    "   \"GAS SPENDING - $ \\n/ residential customer\",\n",
-    "   \"ELECTRIC SAVINGS - % \\nof retail sales\",\n",
-    "   \"ELECTRIC SPENDING - % \\nrevenue\"]]\n",
-    "aceee.columns = [\"STATE\", \"gas_savings_percent\", \"gas_spending_usd\", \"electric_savings_percent\", \"electric_spending_percent\"]\n",
+    "   \"ELECTRIC SAVINGS - % \\nof retail sales\"]\n",
+    "   ]\n",
+    "aceee.columns = [\"STATE\", \"gas_savings_percent\", \"electric_savings_percent\"]\n",
     "\n",
     "# Getting rid of excess empty rows\n",
     "aceee = aceee.iloc[2:53]\n",
@@ -235,18 +261,14 @@
     "\n",
     "# Remove $ and % signs\n",
     "aceee[\"gas_savings_percent\"] = aceee[\"gas_savings_percent\"].str[:-1]\n",
-    "aceee[\"gas_spending_usd\"] = aceee[\"gas_spending_usd\"].str[1:]\n",
     "aceee[\"electric_savings_percent\"] = aceee[\"electric_savings_percent\"].str[:-1]\n",
-    "aceee[\"electric_spending_percent\"] = aceee[\"electric_spending_percent\"].str[:-1]\n",
     "\n",
     "# Make sure all columns are correct types\n",
     "aceee = aceee.astype({\n",
     "   \"STATE\": str,\n",
     "   \"STATEFP\": str,\n",
     "   \"gas_savings_percent\": float,\n",
-    "   \"gas_spending_usd\": float,\n",
-    "   \"electric_savings_percent\": float,\n",
-    "   \"electric_spending_percent\": float\n",
+    "   \"electric_savings_percent\": float\n",
     "})\n",
     "\n",
     "# Write ACEEE data\n",
