home energy affordability added

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -243,11 +243,11 @@
     "aceee = pd.read_csv(os.path.join(energy_dir, \"ACEEE State Scorecard Data, 2021.csv\"))\n",
     "\n",
     "# Capturing correct columns\n",
-    "aceee = aceee[\n",
-    "   [\"STATE\",\n",
+    "aceee = aceee[[\n",
+    "   \"STATE\",\n",
     "   \"GAS \\nSAVINGS - % \\nof retail residential and commercial sales\",\n",
-    "   \"ELECTRIC SAVINGS - % \\nof retail sales\"]\n",
-    "   ]\n",
+    "   \"ELECTRIC SAVINGS - % \\nof retail sales\"\n",
+    "   ]]\n",
     "aceee.columns = [\"STATE\", \"gas_savings_percent\", \"electric_savings_percent\"]\n",
     "\n",
     "# Getting rid of excess empty rows\n",
@@ -274,6 +274,50 @@
     "# Write ACEEE data\n",
     "aceee.to_csv(os.path.join(aceee_outdir, \"aceee.csv\"), index = False)\n",
     "aceee.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Home Energy Affordability Gap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_affordability = pd.read_csv(\"data/energy/Home Energy Affordability Gap by county (2021).csv\")\n",
+    "\n",
+    "# Get average shortfall / LI HH for households below 200% of FPL\n",
+    "e_affordability = e_affordability.iloc[2:3145, [2, 95]]\n",
+    "e_affordability.columns = [\"county_GEOID\", \"avg_shortfall_usd\"]\n",
+    "\n",
+    "\n",
+    "# Process columns\n",
+    "e_affordability = e_affordability.astype({\n",
+    "   \"county_GEOID\": str,\n",
+    "   \"avg_shortfall_usd\": str\n",
+    "})\n",
+    "# Fill county_geoid (= statefp + countyfp) with zeros if necessary\n",
+    "e_affordability[\"county_GEOID\"] = np.where(\n",
+    "   e_affordability[\"county_GEOID\"].str.len() == 4,\n",
+    "   \"0\" + e_affordability[\"county_GEOID\"],\n",
+    "   e_affordability[\"county_GEOID\"]\n",
+    ")\n",
+    "\n",
+    "# Format avg_shortfall_usd from str format to float\n",
+    "e_affordability[\"avg_shortfall_usd\"] = e_affordability[\"avg_shortfall_usd\"].str[1:]\n",
+    "e_affordability[\"avg_shortfall_usd\"] = e_affordability[\"avg_shortfall_usd\"].str.replace(\",\", \"\", regex = False)\n",
+    "e_affordability[\"avg_shortfall_usd\"] = e_affordability[\"avg_shortfall_usd\"].str.replace(\"DIV/0!\", \"NaN\", regex = False)\n",
+    "e_affordability = e_affordability.astype({\"avg_shortfall_usd\": float})\n",
+    "e_affordability = e_affordability.fillna(-999)\n",
+    "\n",
+    "# Write out\n",
+    "e_affordability.to_csv(\"clean_data/energy/home_energy_affordability_gap.csv\", index = False)\n",
+    "e_affordability.head()"
    ]
   },
   {
