Community Power Scorecard processed

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -324,6 +324,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Community Power Scorecard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "community_power = pd.read_csv(\"data/energy/Community Power Scorecard & Methodology (2022).csv\")\n",
+    "community_power = community_power.iloc[:51, [1, 14]]\n",
+    "community_power.columns = [\"STATE\", \"total_percent_score\"]\n",
+    "\n",
+    "# Renaming Washington DC for STATEFP join\n",
+    "community_power[\"STATE\"] = np.where(\n",
+    "   community_power[\"STATE\"].str[:] == \"Washington D.C.\",\n",
+    "   \"District of Columbia\",\n",
+    "   community_power[\"STATE\"]\n",
+    ")\n",
+    "\n",
+    "# Add their state fips code\n",
+    "state_fips = pd.read_csv(\"data/support/state_fips.csv\", dtype = {\"STATE\": str})\n",
+    "state_fips = state_fips[[\"STATE_NAME\", \"STATE\"]]\n",
+    "state_fips.columns = [\"STATE\", \"STATEFP\"]\n",
+    "community_power = pd.merge(community_power, state_fips, how = \"left\", on = \"STATE\")\n",
+    "\n",
+    "community_power.to_csv(\"clean_data/energy/community_power_scorecard.csv\", index = False)\n",
+    "community_power"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Median income of solar installers by tract"
    ]
   },
